test/should-pass/pass/raw-method-in-lib/exe-main.dk
// -*- mode: Dakota; c-basic-offset: 2; tab-width: 2; indent-tabs-mode: nil -*-

klass k1;

klass k2
{
  method f2(object-t self, object-t o) -> object-t {
    $f1(o);
    return self;
  }
}

int-t main() {
  object-t i1 = make(k1::klass);
  object-t i2 = make(k2::klass);

  $f2(i2, i1);

  return 0;
}
