test/should-fail/no-such-keyword/exe-main.dk
// -*- mode: Dakota; c-basic-offset: 2; tab-width: 2; indent-tabs-mode: nil -*-

klass k1
{
  method init(object-t self, void* arg1, void** arg2 : nullptr) -> object-t {
    self = $init(super);
    return self;
  }
}
klass k2
{
  method init(object-t self) -> object-t {
    self = $init(super);
    return self;
  }
}

int-t main() {
  object-t o = make(k1::klass, #bogus : 42);
  USE(o);
  return 0;
}
